--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,5 +25,9 @@ add_custom_target(generate_source copy-xml)
 add_library(vkpp INTERFACE)
 target_include_directories(vkpp INTERFACE ${CMAKE_SOURCE_DIR}/include)
 target_link_libraries(vkpp INTERFACE Vulkan-Headers)
+target_compile_features(vkpp INTERFACE cxx_std_20)
 
 add_subdirectory(sample)
+
+add_subdirectory(tests)
+
