Broke out the header into 3 and put strings into its own .cpp file
vkpp_core: enums, bitmasks, flags, handles, and structs
vkpp_functions: Dispatch tables for core & extensions
vkpp_string: string printers for enums, bitmasks, and flags

vkpp_string also has a .cpp file, which greatly helps compilation time.

Also added +operator for enums & bitmasks to easily decay to the C type
Then added constructors for handles from the C type. In case its needed.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,10 +22,26 @@ endif()
 
 add_custom_target(generate_source copy-xml)
 
+add_library(vkpp_core INTERFACE)
+target_include_directories(vkpp_core INTERFACE ${CMAKE_SOURCE_DIR}/include)
+target_link_libraries(vkpp_core INTERFACE Vulkan-Headers)
+target_compile_features(vkpp_core INTERFACE cxx_std_20)
+
+add_library(vkpp_functions INTERFACE)
+target_link_libraries(vkpp_functions INTERFACE vkpp_core)
+
 add_library(vkpp INTERFACE)
-target_include_directories(vkpp INTERFACE ${CMAKE_SOURCE_DIR}/include)
-target_link_libraries(vkpp INTERFACE Vulkan-Headers)
+target_link_libraries(vkpp INTERFACE Vulkan-Headers vkpp_core vkpp_functions)
 target_compile_features(vkpp INTERFACE cxx_std_20)
+
+add_library(vkpp_string include/vkpp_string.cpp)
+target_include_directories(vkpp_string PUBLIC ${CMAKE_SOURCE_DIR}/include)
+target_link_libraries(vkpp_string PUBLIC Vulkan-Headers vkpp)
+target_compile_features(vkpp_string PUBLIC cxx_std_20)
+
+if (SET_COMPILE_TIME_TRACE)
+target_compile_options(vkpp_string PUBLIC -ftime-trace)
+endif(SET_COMPILE_TIME_TRACE)
 
 add_subdirectory(sample)
 
