Create Loader class to open the Vulkan-Loader library.
The `Loader` class will load the .dll/.so/dylib for you, making it easy to use
the bindings without dynamically linking to vulkan. The interface of the
GlobalFunctions and InstanceFunctions were changed to use `Loader` making
initialization more straight forward.

--- a/sample/CMakeLists.txt
+++ b/sample/CMakeLists.txt
@@ -2,11 +2,11 @@
 find_package(Vulkan REQUIRED)
 
 add_executable(basic_sample_usage basic.cpp)
-target_link_libraries(basic_sample_usage Vulkan-Headers vkpp vkpp_string vulkan)
+target_link_libraries(basic_sample_usage Vulkan::Headers vkpp vkpp_string Vulkan::Vulkan)
 set_target_properties(basic_sample_usage PROPERTIES CXX_STANDARD 20)
 
 add_executable(test_vkhpp_compilation test_vkhpp.cpp)
-target_link_libraries(test_vkhpp_compilation Vulkan-Headers vulkan)
+target_link_libraries(test_vkhpp_compilation Vulkan::Headers Vulkan::Vulkan)
 set_target_properties(test_vkhpp_compilation PROPERTIES CXX_STANDARD 17)
 
 option(SET_COMPILE_TIME_TRACE "enable clang's -ftime-trace " OFF)
