--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -9,3 +9,9 @@ FetchContent_MakeAvailable(catch2)
 
 add_executable(static_tests static_test.cpp)
 target_link_libraries(static_tests vkpp)
+
+find_package(Vulkan REQUIRED)
+
+add_executable(vk-module-test main.cpp flags_test.cpp functions_test.cpp)
+target_link_libraries(vk-module-test vkpp Vulkan::Vulkan Catch2)
+
