Separated 17 and 20 header versions, rename vkpp to vkm
Add a fixed_vector type for use with more advanced binding capabilities
Used Mozilla as basis for clang-format
Created a codegen_text for long strings the generator.py uses

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,30 +20,38 @@ if(NOT vulkan_headers_POPULATED)
     
 endif()
 
-add_custom_target(generate_source copy-xml)
+add_library(vk-module-compiler-warnings INTERFACE)
 
-add_library(vkpp_core INTERFACE)
-target_include_directories(vkpp_core INTERFACE ${CMAKE_SOURCE_DIR}/include)
-target_link_libraries(vkpp_core INTERFACE Vulkan::Headers)
-target_compile_features(vkpp_core INTERFACE cxx_std_17)
-
-add_library(vkpp_functions INTERFACE)
-target_link_libraries(vkpp_functions INTERFACE vkpp_core)
-if (NOT WIN32)
-    target_link_libraries(vkpp_functions INTERFACE ${CMAKE_DL_LIBS})
+# Determine whether we're compiling with clang++
+string(FIND "${CMAKE_CXX_COMPILER}" "clang++" VK_MODULE_COMPILER_CLANGPP)
+if(VK_MODULE_COMPILER_CLANGPP GREATER -1)
+  set(VK_MODULE_COMPILER_CLANGPP 1)
+else()
+  set(VK_MODULE_COMPILER_CLANGPP 0)
 endif()
 
-add_library(vkpp INTERFACE)
-target_link_libraries(vkpp INTERFACE Vulkan::Headers vkpp_core vkpp_functions)
-target_compile_features(vkpp INTERFACE cxx_std_17)
+target_compile_options(vk-module-compiler-warnings
+        INTERFACE
+        $<$<OR:$<CXX_COMPILER_ID:AppleClang>,$<CXX_COMPILER_ID:GNU>,${VK_MODULE_COMPILER_CLANGPP}>:
+        -Wall
+        -Wextra
+        -pedantic-errors
+        -Wconversion
+        -Wsign-conversion>
+        $<$<CXX_COMPILER_ID:MSVC>:
+        /WX
+        /W4>
+        )
 
-add_library(vkpp_string include/vkpp_string.cpp)
-target_include_directories(vkpp_string PUBLIC ${CMAKE_SOURCE_DIR}/include)
-target_link_libraries(vkpp_string PUBLIC Vulkan::Headers vkpp)
-target_compile_features(vkpp_string PUBLIC cxx_std_17)
+add_custom_target(generate_source copy-xml)
+
+add_subdirectory(cpp17)
+add_subdirectory(cpp20)
+
 
 if (SET_COMPILE_TIME_TRACE)
-target_compile_options(vkpp_string PUBLIC -ftime-trace)
+target_compile_options(vkm17_string PUBLIC -ftime-trace)
+target_compile_options(vkm20_string PUBLIC -ftime-trace)
 endif(SET_COMPILE_TIME_TRACE)
 
 add_subdirectory(sample)
