First draft on using an expected type for create/get functions
Removed per extension dispatch tables
Refactored much of the function printing logic to handle the new expected type
Renamed Loader to DynamicLibrary
Change bitmasks operator+ to c_enum

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -8,7 +8,7 @@ FetchContent_Declare(
 FetchContent_MakeAvailable(catch2)
 
 add_executable(static_tests static_test.cpp)
-target_link_libraries(static_tests vkm)
+target_link_libraries(static_tests vkm17)
 
 find_package(Vulkan REQUIRED)
 
