Work on being independent from the vulkan C headers

--- a/cpp17/CMakeLists.txt
+++ b/cpp17/CMakeLists.txt
@@ -1,6 +1,6 @@
 add_library(vkm17_core INTERFACE)
 target_include_directories(vkm17_core INTERFACE ${CMAKE_SOURCE_DIR}/cpp17)
-target_link_libraries(vkm17_core INTERFACE Vulkan::Headers vk-module-compiler-warnings)
+target_link_libraries(vkm17_core INTERFACE vk-module-compiler-warnings)
 target_compile_features(vkm17_core INTERFACE cxx_std_17)
 
 add_library(vkm17_function STATIC vkm_function.cpp)
@@ -15,7 +15,7 @@ target_link_libraries(vkm17_string PUBLIC vkm17_core)
 target_compile_features(vkm17_string PUBLIC cxx_std_17)
 
 add_library(vkm17 INTERFACE)
-target_link_libraries(vkm17 INTERFACE Vulkan::Headers vkm17_core vkm17_function vkm17_string)
+target_link_libraries(vkm17 INTERFACE vkm17_core vkm17_function vkm17_string)
 target_compile_features(vkm17 INTERFACE cxx_std_17)
 
 if (SET_COMPILE_TIME_TRACE)
