--- a/cpp20/CMakeLists.txt
+++ b/cpp20/CMakeLists.txt
@@ -1,6 +1,6 @@
 add_library(vkm20_core INTERFACE)
 target_include_directories(vkm20_core INTERFACE ${CMAKE_SOURCE_DIR}/cpp20)
-target_link_libraries(vkm20_core INTERFACE Vulkan::Headers vk-module-compiler-warnings)
+target_link_libraries(vkm20_core INTERFACE vk-module-compiler-warnings)
 target_compile_features(vkm20_core INTERFACE cxx_std_20)
 
 add_library(vkm20_function STATIC vkm_function.cpp)
@@ -15,7 +15,7 @@ target_link_libraries(vkm20_string PUBLIC vkm20_core)
 target_compile_features(vkm20_string PUBLIC cxx_std_20)
 
 add_library(vkm20 INTERFACE)
-target_link_libraries(vkm20 INTERFACE Vulkan::Headers vkm20_core vkm20_function vkm20_string)
+target_link_libraries(vkm20 INTERFACE vkm20_core vkm20_function vkm20_string)
 target_compile_features(vkm20 INTERFACE cxx_std_20)
 
 if (SET_COMPILE_TIME_TRACE)
