Finished removing dependence on vulkan-headers
This means the bindings do not require the system installed
C vulkan headers, allowing for greater flexibility in usage
and implementation.

--- a/sample/CMakeLists.txt
+++ b/sample/CMakeLists.txt
@@ -6,16 +6,16 @@ option(GLFW_BUILD_EXAMPLES "" OFF)
 
 include(FetchContent)
 FetchContent_Declare(
-    glfw
+    glfw_repo
     GIT_REPOSITORY https://github.com/glfw/glfw
     GIT_TAG        3.3.2
 )
-FetchContent_MakeAvailable(glfw)
+FetchContent_MakeAvailable(glfw_repo)
 
 find_package(Vulkan REQUIRED)
 
 add_executable(basic_sample_usage basic.cpp)
-target_link_libraries(basic_sample_usage vkm20 Vulkan::Vulkan)
+target_link_libraries(basic_sample_usage vkm20)
 set_target_properties(basic_sample_usage PROPERTIES CXX_STANDARD 20)
 
 # add_executable(test_vkhpp_compilation test_vkhpp.cpp)
@@ -26,6 +26,7 @@ set_target_properties(basic_sample_usage PROPERTIES CXX_STANDARD 20)
 add_executable(vk-module-triangle-header triangle.cpp)
 target_link_libraries(vk-module-triangle-header
     PRIVATE
+    Vulkan::Headers
     glfw
     vkm20_function
     vk-module-compiler-warnings )
