Add automatic suppression for leak sanitizer
use VK_MODULE_DISABLE_LEAK_SANITIZER_SUPPRESSION to disable it, in case
someone wants to have that output not be silenced.

--- a/sample/CMakeLists.txt
+++ b/sample/CMakeLists.txt
@@ -30,6 +30,9 @@ target_link_libraries(vk-module-triangle-header
     vk_module_20
     vk-module-compiler-warnings )
 
+target_compile_options(vk-module-triangle-header PUBLIC -fsanitize=address)
+target_link_options(vk-module-triangle-header PUBLIC -fsanitize=address)
+
 add_custom_target(copy-shader-files ALL
     COMMAND ${CMAKE_COMMAND} -E copy_directory ${CMAKE_SOURCE_DIR}/sample/shaders ${CMAKE_CURRENT_BINARY_DIR}
     DEPENDS vk-module-triangle-header)
