Move simple vulkan bindings into include/vulkan folder

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,8 +26,8 @@ if (VK_MODULE_GENERATE_SOURCE)
             COMMAND ${CMAKE_COMMAND} -E copy ${vulkan_headers_SOURCE_DIR}/registry/vk.xml ${CMAKE_SOURCE_DIR}/registry/vk.xml)
         add_custom_target(run_python_generator
             COMMAND ${PYTHON_EXECUTABLE} ${PROJECT_SOURCE_DIR}/generate.py)
-        add_custom_target(copy-vk-platform-cpp-17 ALL
-            COMMAND ${CMAKE_COMMAND} -E copy ${vulkan_headers_SOURCE_DIR}/include/vulkan/vk_platform.h ${CMAKE_SOURCE_DIR}/cpp17/vk_platform.h)
+        add_custom_target(copy-vk-platform-simple-cpp ALL
+            COMMAND ${CMAKE_COMMAND} -E copy ${vulkan_headers_SOURCE_DIR}/include/vulkan/vk_platform.h ${CMAKE_SOURCE_DIR}/include/vulkan/vk_platform.h)
         add_custom_target(copy-vk-platform-cpp-20 ALL
             COMMAND ${CMAKE_COMMAND} -E copy ${vulkan_headers_SOURCE_DIR}/include/vulkan/vk_platform.h ${CMAKE_SOURCE_DIR}/cpp20/vk_platform.h)
     endif()
@@ -57,10 +57,35 @@ target_compile_options(vk-module-compiler-warnings
     /W4>
     )
 if (VK_MODULE_GENERATE_SOURCE)
-add_custom_target(generate_source copy-xml copy-vk-platform-cpp-17 copy-vk-platform-cpp-20)
+add_custom_target(generate_source copy-xml copy-vk-platform-simple-cpp copy-vk-platform-cpp-20)
 endif()
 
-add_subdirectory(cpp20)
+add_library(vk_module_20 STATIC ${CMAKE_SOURCE_DIR}/cpp20/vk_module.h ${VerifyCXX})
+target_include_directories(vk_module_20 PUBLIC ${CMAKE_SOURCE_DIR}/cpp20)
+target_link_libraries(vk_module_20 PUBLIC vk-module-compiler-warnings)
+target_compile_features(vk_module_20 PUBLIC cxx_std_20)
+set_target_properties(vk_module_20 PROPERTIES CXX_STANDARD 20)
+set_target_properties(vk_module_20 PROPERTIES LINKER_LANGUAGE CXX)
+
+if (NOT WIN32)
+    target_link_libraries(vk_module_20 PUBLIC ${CMAKE_DL_LIBS})
+endif()
+
+add_library(vulkan-simple-cpp STATIC ${CMAKE_SOURCE_DIR}/include/vulkan/vulkan.h ${VerifyCXX})
+target_include_directories(vulkan-simple-cpp PUBLIC ${CMAKE_SOURCE_DIR}/include)
+target_link_libraries(vulkan-simple-cpp PUBLIC vk-module-compiler-warnings)
+target_compile_features(vulkan-simple-cpp PUBLIC cxx_std_11)
+target_compile_options(vulkan-simple-cpp PRIVATE VULKAN_SIMPLE_CPP_IMPLEMENTATION)
+set_target_properties(vulkan-simple-cpp PROPERTIES CXX_STANDARD 11)
+set_target_properties(vulkan-simple-cpp PROPERTIES LINKER_LANGUAGE CXX)
+
+if (NOT WIN32)
+    target_link_libraries(vk_module_20 PUBLIC ${CMAKE_DL_LIBS})
+endif()
+
+if (SET_COMPILE_TIME_TRACE)
+target_compile_options(vk_module_20 PUBLIC -ftime-trace)
+endif(SET_COMPILE_TIME_TRACE)
 
 if (VK_MODULE_SAMPLES)
     add_subdirectory(sample)
